--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.80.6",
     "firebase": "^11.8.1",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
